<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/song_btn"
            style="@style/buttonStyle"
            android:background="@color/colorAccent"
            android:text="@string/songs" />

        <Button
            android:id="@+id/artist_btn"
            style="@style/buttonStyle"
            android:background="@color/colorAccent"
            android:text="@string/artists" />

        <Button
            android:id="@+id/album_btn"
            style="@style/buttonStyle"
            android:background="@color/colorAccent"
            android:text="@string/albums" />

    </LinearLayout>

</ScrollView>