<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/standard_padding"
                android:paddingRight="@dimen/standard_padding">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_margin="@dimen/middle_padding"
                    android:contentDescription="@string/backward_btn"
                    android:src="@drawable/ic_back_gray" />

                <ImageView
                    android:id="@+id/shuffle_btn"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_margin="@dimen/middle_padding"
                    android:contentDescription="@string/shuffle_btn"
                    android:src="@drawable/ic_shuffle_gray" />

                <ImageView
                    android:id="@+id/repeat_btn"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_margin="@dimen/middle_padding"
                    android:contentDescription="@string/repeat_btn"
                    android:src="@drawable/ic_repeat_gray" />

                <ImageView
                    android:id="@+id/home_btn"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_margin="@dimen/middle_padding"
                    android:contentDescription="@string/forward_btn"
                    android:src="@drawable/ic_home_gray" />

            </LinearLayout>

            <ImageView
                android:id="@+id/pause_btn"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:contentDescription="@string/play_btn"
                android:src="@drawable/ic_play_gray" />
        </LinearLayout>

        <include
            android:id="@+id/include"
            layout="@layout/music_list" />

    </LinearLayout>

</layout>